<resources>
    <string name="app_name">basekt</string>


    <!-- xloading -->
    <string name="xloading_dialog_message">正在加载中</string>
    <string name="xloading_no_network_text">无网络连接，请检查你的网络</string>
    <string name="xloading_error_text">加载失败，请稍后再试</string>
    <string name="xloading_empty_text">暂无数据</string>
    <string name="xloading_retry_text">点击重试</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="accountHintPutMobile">请输入手机号</string>
    <!--<的ASCII码为 &#060;>的ASCII码为 &#062; @的ASCII码为 &#064; &的ASCII码为 &#038; \的&#092;'的为039-->
    <string name="accountRulePassword">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-/|\\;,:()$&#038;".?!{}[]#%^*+=_~@&#060;&#062;&#039;&#092;</string>
    <string name="accountHintPutPassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login_other">其他登录方式</string>
    <string name="second_english">S</string>
    <string name="register">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="common_phone_input_hint">输入手机号码</string>
    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_send_code_succeed">验证码已发送，请注意查收</string>
</resources>
