<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="at"
            type="com.example.basekt.base.BaseLoginActivity"/>

        <variable
            name="mobileEdit"
            type="com.example.basekt.widgets.MobileEditText"/>

        <variable
            name="passwordEdit"
            type="com.example.basekt.widgets.PasswordEditText"/>

        <variable
            name="toolbar"
            type="com.example.basekt.widgets.IToolbar"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            app:toolbarVm="@{toolbar}"/>

        <ImageView
            android:layout_width="@dimen/space_200"
            android:layout_height="@dimen/space_200"
            android:layout_gravity="center"
            android:layout_margin="@dimen/space_40"
            android:src="@mipmap/app_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_80"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginEnd="@dimen/space_80"
            android:text="@string/phone_number"/>

        <include
            layout="@layout/mobile_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_80"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginEnd="@dimen/space_80"
            app:mobile="@{mobileEdit}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_80"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginEnd="@dimen/space_80"
            android:text="@string/password"/>

        <include
            android:id="@+id/passwordEditText"
            layout="@layout/password_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_80"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginEnd="@dimen/space_80"
            app:password="@{passwordEdit}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/space_60"
            android:layout_marginTop="@dimen/space_30"
            android:layout_marginEnd="@dimen/space_120"
            android:onClick="@{at::onForgetPasswordClick}"
            android:text="@string/forget_password"
            android:textColor="@color/colorAccent"/>

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_80"
            android:layout_marginTop="@dimen/space_40"
            android:layout_marginRight="@dimen/space_80"
            android:onClick="@{at::onLoginClick}"
            android:text="@string/login"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_100"
            android:layout_marginRight="@dimen/space_100"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                style="@style/HorizontalLineStyle"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_30"
                android:layout_marginRight="@dimen/space_30"
                android:text="@string/login_other"
                android:textColor="@color/black50"/>

            <View
                style="@style/HorizontalLineStyle"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_100"
            android:layout_marginTop="@dimen/space_40"
            android:layout_marginRight="@dimen/space_100"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{at::onQQClick}"
                android:src="@mipmap/ic_login_qq"/>

            <ImageView
                android:id="@+id/iv_login_wx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{at::onWeChatClick}"
                android:src="@mipmap/ic_login_wx"/>

            <ImageView
                android:id="@+id/iv_login_wb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{at::onSinaClick}"
                android:src="@mipmap/ic_login_weibo"/>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</layout>